--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -112,7 +112,7 @@ var _hmt = _hmt || [];
 				<h4><a href="">考研分享</a></h4>
 				<p><a href="javascript:voide(0)" class="writer">小何</a><a href="#" class="Clas"></a><a href="javascript:voide(0)" class="time">2018-4-13</a><a href="javascript:voide(0)" class="opine">评论（16）</a><a href="javascript:voide(0)" class="look">浏览（131）</a></p>
 				<p class="article_con">受邀于校“多火”学弟学妹的邀请，谨以此页来与诸位分享考研的一点心得</p>
-				<a href="shareduohuo.html" class="readAll">-能者为师-</a>
+				<a href="day/article1231.html" class="readAll">-能者为师-</a>
 			</div>
 			<div style="clear:both;"></div>
 		</div>
