--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -112,12 +112,53 @@ var _hmt = _hmt || [];
 				<h4><a href="">考研分享</a></h4>
 				<p><a href="javascript:voide(0)" class="writer">小何</a><a href="#" class="Clas"></a><a href="javascript:voide(0)" class="time">2018-4-13</a><a href="javascript:voide(0)" class="opine">评论（16）</a><a href="javascript:voide(0)" class="look">浏览（131）</a></p>
 				<p class="article_con">受邀于校“多火”学弟学妹的邀请，谨以此页来与诸位分享考研的一点心得</p>
-				<a href="day/article1231.html" class="readAll">-能者为师-</a>
+				<a href="shareduohuo.html" class="readAll">-能者为师-</a>
 			</div>
 			<div style="clear:both;"></div>
 		</div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="article_tit">
+			<div class="article_tit_pic"><a href="#"><img src="images/timg.jpg"/></a></div>
+			<div class="article_tit_txt">
+				<h4><a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E6%AD%A5%E5%B0%9D%E8%AF%95Kmeans%E7%AE%97%E6%B3%95.md">spark算法学习之聚类算法k-means</a></h4>
+				<p><a href="javascript:voide(0)" class="writer">小何</a><a href="#" class="Clas"></a><a href="javascript:voide(0)" class="time">2016-11-19</a><a href="javascript:voide(0)" class="opine">评论（16）</a><a href="javascript:voide(0)" class="look">浏览（963）</a></p>
+				<p class="article_con">Give me Spark、Data、Algorithm,I can cacular the end of the world！</p>
+				<a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E6%AD%A5%E5%B0%9D%E8%AF%95Kmeans%E7%AE%97%E6%B3%95.md" class="readAll">-初窥算法-</a>
+			</div>
+			<div style="clear:both;"></div>
+		</div>
+
+
+			<div class="article_tit_pic"><a href="#"><img src="images/zhuangbi.png"/></a></div>
+			<div class="article_tit_txt">
+				<h4><a href="pagestudy.html">GitHub中Page的使用</a></h4>
+				<p><a href="javascript:voide(0)" class="writer">小何</a><a href="#" class="Clas"></a><a href="javascript:voide(0)" class="time">2016-10-1</a><a href="javascript:voide(0)" class="opine">评论（30）</a><a href="javascript:voide(0)" class="look">浏览（459）</a></p>
+				<p class="article_con">也许，你只认为这是一个普通的博客，其实我要告诉你，这个博客是利用GitHub搭建起来的。你也想提升自己的逼格么，你想不花钱去买服务器买域名么，你想在工作的时候让面试的面试官们耳目一新么，赶快来看一下这次的分享吧。</p>
+				<a href="pagestudy.html" class="readAll">-阅读全文-</a>
+			</div>
+			<div style="clear:both;"></div>
+		</div>
+
+			
+
+        
+
+		
+		
+		
 	<!--	<div class="Index">
 			<ul>
 				<li><a href="#" class="Index_on">首页</a></li>
