--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -141,7 +141,7 @@ var _hmt = _hmt || [];
 			<div style="clear:both;"></div>
 		</div>
 
-
+		<div class="article_tit">
 			<div class="article_tit_pic"><a href="#"><img src="images/zhuangbi.png"/></a></div>
 			<div class="article_tit_txt">
 				<h4><a href="pagestudy.html">GitHub中Page的使用</a></h4>
