--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var _hmt = _hmt || [];
 			<ul>
 				<li><a href="./index.html" class="on">首页</a></li>
 				<li><a href="./about.html">个人简介</a></li>
-				<li><a href="./article_list_jy.html">技术分享</a></li>
+				<li><a href="./article_list_jy.html">日记</a></li>
 				<li><a href="./time.html">自学之路</a></li>
 				<li><a href="./message.html">留言板</a></li>
 			</ul>
