--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -42,9 +42,9 @@ var _hmt = _hmt || [];
 		<div class="nav_t"></div>
 		<div class="nav_c">
 			<ul>
-				<li><a href="./index.html" class="on">首页</a></li>
+				<li><a href="./index.html" >首页</a></li>
 				<li><a href="./about.html">个人简介</a></li>
-				<li><a href="./article_list_jy.html">技术分享</a></li>
+				<li><a href="./article_list_jy.html" class="on">日记</a></li>
 				<li><a href="./time.html">自学之路</a></li>
 				<li><a href="./message.html">留言板</a></li>
 			</ul>
@@ -109,7 +109,7 @@ var _hmt = _hmt || [];
 <div class="article_tit">
 			
 				<a href="shareduohuo.html" class="readAll">-能者为师-</a>
-			
+				<div style="clear:both;"></div>
 		</div>
 
 
@@ -153,7 +153,7 @@ var _hmt = _hmt || [];
 </div>
 <div class="return_top"><a href="javascript:void(0)"></a></div>
 <div class="footer">
-	<a href="#">何帅个人博客</a>&nbsp;&nbsp;|&nbsp;&nbsp;QQ:2281444815 &nbsp;&nbsp;|&nbsp;&nbsp;网站开发者：何帅
+	<a href="#">qren个人博客</a>&nbsp;&nbsp;|&nbsp;&nbsp;QQ:2281444815 &nbsp;&nbsp;
 </div>
 <!--con end-->
 <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"3","bdPos":"left","bdTop":"250"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
