--- a/day/article1231.html
+++ b/day/article1231.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Hi小何</title>	
-		<link href="css/detailsPages.css" rel="stylesheet" type="text/css" /><!--详情页CSS-->
-		<link href="css/rocketTop.css" rel="stylesheet" type="text/css" /><!--返回顶部-->
+		<link href="../css/detailsPages.css" rel="stylesheet" type="text/css" /><!--详情页CSS-->
+		<link href="../css/rocketTop.css" rel="stylesheet" type="text/css" /><!--返回顶部-->
 	</head>
 	<body>		
 		<header class="dtTitBg" id="dtTitBg" style="background:url(images/img30.jpg) no-repeat;" >
@@ -76,6 +76,6 @@
 			</div>
 		</div>
 	</body>
-	<script src="js/jquery-1.7.2.min.js"></script><!--1.7.2JQ引入-->
-	<script src="js/rocketTop.js" type="text/javascript"></script><!--返回顶部-->
+	<script src="../js/jquery-1.7.2.min.js"></script><!--1.7.2JQ引入-->
+	<script src="../js/rocketTop.js" type="text/javascript"></script><!--返回顶部-->
 </html>
