--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -108,7 +108,7 @@ var _hmt = _hmt || [];
 
 <div class="article_tit">
 			
-				<a href="shareduohuo.html" class="readAll">-能者为师-</a>
+				<a href="day/article1231.html" class="readAll">-能者为师-</a>
 				<div style="clear:both;"></div>
 		</div>
 
