--- a/day/article1231.html
+++ b/day/article1231.html
@@ -7,7 +7,7 @@
 		<link href="../css/rocketTop.css" rel="stylesheet" type="text/css" /><!--返回顶部-->
 	</head>
 	<body>		
-		<header class="dtTitBg" id="dtTitBg" style="background:url(images/img30.jpg) no-repeat;" >
+		<header class="dtTitBg" id="dtTitBg" style="background:url(../images/img30.jpg) no-repeat;" >
 			
 			<div class="TitContent">
 				<div class="TitContentMain">
