--- a/day/article1231.html
+++ b/day/article1231.html
@@ -65,7 +65,7 @@
 		</section><!--等待加入评论功能-->
 		<footer class="dtFoote">
 			<div class="footer-inner">
-				<div class="copyright-2">© 2016/10/7 | powered by <a href="#">小何</a></div>
+				<div class="copyright-2">© 2016/10/7 | powered by <a href="../article_list_jy.html">回到目录</a></div>
 			</div>
 		</footer>
 		<!--返回顶部-->
