--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -131,7 +131,7 @@ var _hmt = _hmt || [];
 		
 		
 		
-	<!--	<div class="Index">
+	<div class="Index">
 			<ul>
 				<li><a href="#" class="Index_on">首页</a></li>
 				<li><a href="#">上一页</a></li>
@@ -145,7 +145,7 @@ var _hmt = _hmt || [];
 				<li><a href="javascript:void(0)">共5页40条</a></li>
 			</ul>
 		</div>
-		-->
+		
 	</div>
 	<!--article end-->
 
