--- a/day/article1231.html
+++ b/day/article1231.html
@@ -38,7 +38,7 @@
 	<font size=4 style="line-height:2">
 	                                      <h1>为博客忙碌的一天？</h1>
   　上午和中午为了这个博客忙碌着，没有腾出精力去弄文章的事情。这是不对的，因为这中间存在懒惰的成分。
-    下午和晚上基本没有学习，我深深的检讨，想做一个push的人却还是在原地踏步。
+    下午和晚上基本没有学习，我深深的检讨，想做一个push的人却还是在原地踏步。。。
 	 </font>	
 
 
