--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
 		<div class="tonZ">
 			<h3 class="zn_tonZ">板块说明</h3>
 			<p class="tonZ_con">
-				<span>有心做学问，但只奈本人能力有限，再加上面临考研，时间有限，如有疑问，请咨询我的<strong><a href="./robot.html" class="st"></strong>智能助手</a>.</span>
+				<span></span>
 			</p>
 		</div>
 
@@ -98,7 +98,7 @@ var _hmt = _hmt || [];
 	</div>
 	<div class="article_left">
 		<div class="article_tuiJ">
-			<h3><a href="#">首页</a>&gt;&gt;<a href="#">技术分享</a></h3>
+			<h3><a href="#">首页</a>&gt;&gt;<a href="#">日记</a></h3>
 			<p>学习是快乐的，独乐乐不如众乐乐</p>
 		</div>
 
@@ -106,23 +106,31 @@ var _hmt = _hmt || [];
 
 
 
-<div class="article_tit">
+		<div class="article_tit">
+				<div class="article_tit_txt">
+			<p><a href="day/article1231.html" class="title">-能者为师-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2019-12-31</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
 			
-				<a href="day/article1231.html" class="readAll">-能者为师-</a>
-				<div style="clear:both;"></div>
-		</div>
+					<div style="clear:both;"></div>
+				</div>
+				</div>
 
 
 
 <div class="article_tit">
-	<a href="day/article0101.html" class="readAll">-能者为师-</a>
+		<div class="article_tit_txt">
+	<p><a href="day/article0101.html" class="title">-能者为师-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2020-1-1</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
+	
 			<div style="clear:both;"></div>
+		</div>
 		</div>
 
-<div class="article_tit">
-	<a href="day/article1231.html" class="readAll">-能者为师-</a>
-			<div style="clear:both;"></div>
-		</div>
+		<div class="article_tit">
+				<div class="article_tit_txt">
+			<p><a href="day/article0101.html" class="title">-能者为师-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2017-2-10</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
+			
+					<div style="clear:both;"></div>
+				</div>
+				</div>
 
 			
 
