--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		 <meta name="viewport" content="width=device-width" />
-		<title>小何--博客首页</title>
+		<title>qren--博客首页</title>
 		<meta name="Keywords" content="关键词,关键词,关键词"/>
 		<meta name="description" content=""/>
 		<link type="text/css" rel="stylesheet" href="css/public.css"/>
@@ -54,9 +54,9 @@ var _hmt = _hmt || [];
 	<div class="top_con">
 		<div class="top_con_left"></div>
 		<div class="top_con_right">
-			<p class="pinf">生的再平凡也是限量版</p>
-			<p class="jiaz">既然是限量版就该有限量版的价值</p>
-			<p class="bulang">----By:小何</p>
+			<p class="pinf">真正的捷径</p>
+			<p class="jiaz">往往是当初看起来最远的那条路</p>
+			<p class="bulang">----By:qren</p>
 		</div>
 	</div>
 </div>
