--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -108,7 +108,7 @@ var _hmt = _hmt || [];
 
 		<div class="article_tit">
 				<div class="article_tit_txt">
-			<p><a href="day/article1231.html" class="title">-能者为师-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2019-12-31</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
+			<p><a href="day/article20191231.html" class="title">-最后一天开始-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2019-12-31</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
 			
 					<div style="clear:both;"></div>
 				</div>
@@ -118,7 +118,7 @@ var _hmt = _hmt || [];
 
 <div class="article_tit">
 		<div class="article_tit_txt">
-	<p><a href="day/article0101.html" class="title">-能者为师-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2020-1-1</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
+	<p><a href="day/article20200101.html" class="title">-一月小计（一）-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2020-1-1</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
 	
 			<div style="clear:both;"></div>
 		</div>
