--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ var _hmt = _hmt || [];
 		<div class="tonZ">
 			<h3 class="zn_tonZ">站内通知<img src="images/tonZ.gif" width="20"height="20"/></h3>
 			<p class="tonZ_con">
-				<span>目前因科研任务在身，博客暂时停更，将在不久之后重新打理，<a href="./message.html">有事请留言</a>
+				<span><a href="./message.html"></a>
 			</p>
 
 			<embed src="images/dog.swf" flashvars="vcastr_file=2.flv&IsAutoPlay=0&LogoUrl=images/logo.jpg" quality="high"  width="300" height="225"></embed> 
