--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Hi小何</title>	
+		<title>Hi Qren</title>	
 		<link href="../css/detailsPages.css" rel="stylesheet" type="text/css" /><!--详情页CSS-->
 		<link href="../css/rocketTop.css" rel="stylesheet" type="text/css" /><!--返回顶部-->
+		<script src="../js/loadBlog.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			window.onload = loadBlog()
+		</script>
 	</head>
 	<body>		
 		<header class="dtTitBg" id="dtTitBg" style="background:url(../images/img30.jpg) no-repeat;" >
