--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -7,7 +7,7 @@
 		<link href="../css/rocketTop.css" rel="stylesheet" type="text/css" /><!--返回顶部-->
 		<script src="../js/loadBlog.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			window.onload = loadBlog()
+			window.onload = loadBlog("20200101")
 		</script>
 	</head>
 	<body>		
