--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -8,6 +8,8 @@
 		<script src="../js/loadBlog.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			window.onload = loadBlog("20200101")
+			var div1 = document.getElementById("blog");
+    		alert(div1);
 		</script>
 	</head>
 	<body>		
@@ -23,6 +25,7 @@
 			</div><!--靠着此元素支撑header的背景图片高度-->
 		</header>
 		<div id="blog">
+			asdasds
 		</div>
 			<section class="dt-main effect">
 				<div class="dt-content">
