--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -24,7 +24,7 @@
 				<div style="margin:40px auto;width: 1px;"></div>
 			</div><!--靠着此元素支撑header的背景图片高度-->
 		</header>
-		<div id="blog">
+		<div id="blog" class="aaa">
 			asdasds
 		</div>
 			<section class="dt-main effect">
