--- a/day/article20200101.html
+++ b/day/article20200101.html
@@ -47,23 +47,23 @@
 				<div class="dt-content">
 					
 						<div>日期：2020.01.02</div>
-						<h1>修改论文格式</h1>
+						<h1>想摆脱静态页面</h1>
 	  　				<p>
-								很不容易的找到这个期刊的投稿方式，看了投稿格式要求后，照着要求来尽量的修改，在这个过程中犯了不少错误。
+								想了一晚上，决定即使github不提供数据库，也想通过xml来存储信息。否则只用静态页面太傻了，而且很不方便。
 		
 						</p>
 						<p>
-								首先是没到一个小阶段就会放松自己去干下别的事情，再回过头来又不知如何开始，这是一个恶性循环。					
+								为了实现这个功能只可以慢慢查资料，边学边调。先通过静态页面调整好样式，然后想着使用js来生成。可惜做起来并不容易，也因为太久没做变得生疏。小小的错误往往很难发现，转了一大圈才发现。					
 						</p>
 						<p>
-								看懂一个阶段并不代表会做，最终要的是看懂了不代表已经做了，而这个时候大脑会麻痹自己觉得自己已经做完了，且不说并没有做，就算在做，过程中仍然会遇到很多问题。如果就这样去干别的事情，再回过头来，发现事情并没有那么简单，
-							就无端的浪费了很多时间，对自己的计划造成很大的干扰。					
+								感受写代码才最能发现自己的粗心，代码是不会骗人的，达不到想要的效果一定是自己哪里没处理好。有时候也会问自己确实是语言有问题呢，这是不对的，不要为自己找借口，语言也不可能所有情况
+								都能考虑的，这些都是要自己解决的。					
 						</p>
 						<p>
-								想要改变这一点，必须从每件事情开始坚定的与自己作斗争。					
+								因此写代码很能锻炼人的粗心，粗心的很大原因是唯心，总认为没有问题才会粗心。而代码可以把自己很多粗心的地方给揪出来，揪的越难发现自己的错误也越深刻，妙不可言。					
 						</p>
 						<p>
-								今天就是回头打乱了计划导致并没有高效的完成工作。					
+								中途调不出代码也有点灰心，去干了别的事情，把电视剧一口气看了七级，确实不对。					
 						</p>
 					
 				</div>
