--- a/article_list_jy.html
+++ b/article_list_jy.html
@@ -126,7 +126,7 @@ var _hmt = _hmt || [];
 
 		<div class="article_tit">
 				<div class="article_tit_txt">
-			<p><a href="day/article0101.html" class="title">-能者为师-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2017-2-10</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
+			<p><a href="day/article0101.html?d=202001" class="title">-能者为师-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2017-2-10</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
 			
 					<div style="clear:both;"></div>
 				</div>
