--- a/day/article20200101.html
+++ b/day/article20200101.html
@@ -56,8 +56,7 @@
 								为了实现这个功能只可以慢慢查资料，边学边调。先通过静态页面调整好样式，然后想着使用js来生成。可惜做起来并不容易，也因为太久没做变得生疏。小小的错误往往很难发现，转了一大圈才发现。					
 						</p>
 						<p>
-								感受写代码才最能发现自己的粗心，代码是不会骗人的，达不到想要的效果一定是自己哪里没处理好。有时候也会问自己确实是语言有问题呢，这是不对的，不要为自己找借口，语言也不可能所有情况
-								都能考虑的，这些都是要自己解决的。					
+								看懂一个阶段并不代表会做，最终要的是看懂了不代表已经做了，而这个时候大脑会麻痹自己觉得自己已经做完了，且不说并没有做，就算在做，过程中仍然会遇到很多问题。如果就这样去干别的事情，再回过头来，发现事情并没有那么简单， 就无端的浪费了很多时间，对自己的计划造成很大的干扰。					
 						</p>
 						<p>
 								因此写代码很能锻炼人的粗心，粗心的很大原因是唯心，总认为没有问题才会粗心。而代码可以把自己很多粗心的地方给揪出来，揪的越难发现自己的错误也越深刻，妙不可言。					
