--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -5,7 +5,7 @@
 		<title>Hi Qren</title>	
 		<link href="../css/detailsPages.css" rel="stylesheet" type="text/css" /><!--详情页CSS-->
 		<link href="../css/rocketTop.css" rel="stylesheet" type="text/css" /><!--返回顶部-->
-		<link type="text/css" rel="stylesheet" href="css/article_list.css"/>
+		<link type="text/css" rel="stylesheet" href="../css/article_list.css"/>
 		
 	</head>
 	<body>		
