--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -49,19 +49,8 @@
 						
 					</div>
 				</section><!--等待加入评论功能-->
-		<div class="Index">
-			<ul>
-				<li><a href="#" class="Index_on">首页</a></li>
-				<li><a href="#">上一页</a></li>
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
-				<li><a href="#">4</a></li>
-				<li><a href="#">5</a></li>
-				<li><a href="#">下一页</a></li>
-				<li><a href="#">末页</a></li>
-				<li><a href="javascript:void(0)">共5页40条</a></li>
-			</ul>
+		<div class="Index" id="index">
+			
 		</div>
 		
 		<footer class="dtFoote">
