--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -20,16 +20,14 @@
 				<div style="margin:40px auto;width: 1px;"></div>
 			</div><!--靠着此元素支撑header的背景图片高度-->
 		</header>
-		<div id="blog">
-			
-		</div>
-			
+		<div class="Index" id="index"></div>
+		<div id="blog"></div>
 			<section class="dt-main effect">
 					<div class="dt-content">
 						
 							<div>日期：2020.01.02</div>
 							<h1>修改论文格式</h1>
-		　				<p>
+		　					<p>
 									很不容易的找到这个期刊的投稿方式，看了投稿格式要求后，照着要求来尽量的修改，在这个过程中犯了不少错误。
 			
 							</p>
@@ -49,9 +47,7 @@
 						
 					</div>
 				</section><!--等待加入评论功能-->
-		<div class="Index" id="index">
-			
-		</div>
+		
 		
 		<footer class="dtFoote">
 			<div class="footer-inner">
