--- a/day/article20200101.html
+++ b/day/article20200101.html
@@ -67,6 +67,21 @@
 					
 				</div>
 			</section><!--等待加入评论功能-->
+			<section class="dt-main effect">
+					<div class="dt-content">
+							<div>日期：2020.01.02</div>
+							<h1>想要动态页面Index</h1>
+		  　				<p>
+									在通过XML实现了动态页面之后，想继续实现页面index。
+							</p>
+							<p>
+									在这里依然遇到了很多困难，目前为止仍然有一个致命问题没有解决，还没能有效的获得当前url地址，这个看似简单的问题需要不停的调试试验，而github的更新很慢，不会给我实时的回馈。					
+							</p>
+							<p>
+									开了会小差。接下来继续研究。					
+							</p>
+					</div>
+				</section><!--等待加入评论功能-->
 		<footer class="dtFoote">
 			<div class="footer-inner">
 				<div class="copyright-2">© 2016/10/7 | powered by <a href="../article_list_jy.html">回到目录</a></div>
