--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -22,7 +22,7 @@
 		</header>
 		<div class="Index" id="index"></div>
 		<div id="blog"></div>
-			<section class="dt-main effect">
+			<!--section class="dt-main effect">
 					<div class="dt-content">
 						
 							<div>日期：2020.01.02</div>
@@ -46,7 +46,7 @@
 							</p>
 						
 					</div>
-				</section><!--等待加入评论功能-->
+				</section--><!--等待加入评论功能-->
 		
 		
 		<footer class="dtFoote">
