--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -6,11 +6,21 @@
 		<link href="../css/detailsPages.css" rel="stylesheet" type="text/css" /><!--详情页CSS-->
 		<link href="../css/rocketTop.css" rel="stylesheet" type="text/css" /><!--返回顶部-->
 		<link type="text/css" rel="stylesheet" href="../css/blog_list.css"/>
-		
+		<style>
+			abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, html, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+				margin: 0;
+				padding: 0;
+				cursor: url('images/shubiao.ico'),auto;
+			}
+			.st {
+				font-weight: bold;
+				color: black;
+				font-style:oblique
+				}
+		</style>
 	</head>
 	<body>		
 		<header class="dtTitBg" id="dtTitBg" style="background:url(../images/img30.jpg) no-repeat;" >
-			
 			<div class="TitContent">
 				<div class="TitContentMain">
 					<div style="height: 50px;"></div>
