--- a/day/article20200101test.html
+++ b/day/article20200101test.html
@@ -76,7 +76,7 @@
 			<img id="bigimg" style="border:5px solid #fff;" src="" />
 		</div>
 	</div>
-	<div style="position: absolute;top:500px;left:500px;">asdsadasdasdasdddddasdasdasd</div>
+	<div style="top:500px;left:500px;">asdsadasdasdasdddddasdasdasd</div>
 	<div style="position: fixed;top:500px;left:500px;">asdsadasdasdasdddddasdasdasd</div>
 	</body>
 	<script src="../js/jquery-1.7.2.min.js"></script><!--1.7.2JQ引入-->
