--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ var _hmt = _hmt || [];
 				<div class="article_tit_pic"><a  ><img src="images/dream.jpg"/></a></div>
 				<div class="article_tit_txt">
 					<h4><a  >2017致自己</a></h4>
-					<p><a   >小何</a><a   class="Clas"></a><a   class="time">2017-2-10</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
+					<p><a   >qren</a><a   class="Clas"></a><a   class="time">2017-2-10</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
 					<p class="article_con">2017，加油！</p>
 					<a href="./article2017210.html" class="readAll">阅读本文</a>
 				</div>
@@ -143,7 +143,7 @@ var _hmt = _hmt || [];
 				<div class="article_tit_pic"><a  ><img src="images/2016.png"/></a></div>
 				<div class="article_tit_txt">
 					<h4><a  >2016致自己</a></h4>
-					<p><a   >小何</a><a   class="Clas"></a><a   class="time">2016-12-25</a><a   class="opine">评论（98）</a><a   class="look">浏览（423）</a></p>
+					<p><a   >qren</a><a   class="Clas"></a><a   class="time">2016-12-25</a><a   class="opine">评论（98）</a><a   class="look">浏览（423）</a></p>
 					<p class="article_con">2016，你的倾情演出，让我终生难忘。</p>
 					<a href="./article20161225.html" class="readAll">阅读本文</a>
 				</div>
@@ -156,7 +156,7 @@ var _hmt = _hmt || [];
 				<div class="article_tit_pic"><a  ><img src="images/studylife.jpg"/></a></div>
 				<div class="article_tit_txt">
 					<h4><a  >学习</a></h4>
-					<p><a   >小何</a><a   class="Clas"></a><a   class="time">2016-10-3</a><a   class="opine">评论（168）</a><a   class="look">浏览（762）</a></p>
+					<p><a   >qren</a><a   class="Clas"></a><a   class="time">2016-10-3</a><a   class="opine">评论（168）</a><a   class="look">浏览（762）</a></p>
 					<p class="article_con">学习是一生的事，请热爱学习。</p>
 					<a href="./article2016104.html" class="readAll">阅读本文</a>
 				</div>
@@ -168,7 +168,7 @@ var _hmt = _hmt || [];
 				<div class="article_tit_pic"><a  ><img src="images/learnnolong.jpg"/></a></div>
 				<div class="article_tit_txt">
 					<h4><a  >别扶我，我还能学</a></h4>
-					<p><a   >小何</a><a   class="Clas"></a><a   class="time">2016-11-17</a><a   class="opine">评论（20）</a><a   class="look">浏览（296）</a></p>
+					<p><a   >qren</a><a   class="Clas"></a><a   class="time">2016-11-17</a><a   class="opine">评论（20）</a><a   class="look">浏览（296）</a></p>
 					<p class="article_con">感谢有你，带给我这一场场技术的盛宴，我将会一如既往的，秉承一颗谦卑好学的心，去探索关于你的更多的秘密。</p>
 					<a href="./article2016117.html" class="readAll">阅读本文</a>
 				</div>
@@ -188,41 +188,7 @@ var _hmt = _hmt || [];
 			
 
 
-			<div class="article_tit">
-				<div class="article_tit_pic"><a  ><img src="images/shouji.jpg"/></a></div>
-				<div class="article_tit_txt">
-					<h4><a  >住在手机里的朋友</a></h4>
-					<p><a   >小何</a><a   class="Clas"></a><a   class="time">2016-10-2</a><a   class="opine">评论（21）</a><a   class="look">浏览（326）</a></p>
-					<p class="article_con">通信时代，无论是初次相见还是老友重逢，交换联系方式，常常是彼此交换名片，然后郑重或是出于礼貌用手机记下对方的电话号码。在快节奏的生活里，我们不知不觉中就成为住在别人手机里的朋友。又因某些意外，变成了别人手机里匆忙的过客，这种快餐式的友谊 ...通信时代，无论是初次相见还是老友重逢，交换联系方式，常常是彼此交换名片，然后郑重或是出于礼貌用手机记下对方的电话号码。在快节奏的生活里，我们不知不觉中就成为住在别人手机里的朋友。又因某些意外，变成了别人手机里匆忙的过客，这种快餐式的友谊 ...通信时代，无论是初次相见还是老友重逢，交换联系方式，常常是彼此交换名片，然后郑重或是出于礼貌用手机记下对方的电话号码。在快节奏的生活里，我们不知不觉中就成为住在别人手机里的朋友。又因某些意外，变成了别人手机里匆忙的过客，这种快餐式的友谊 ...</p>
-					<a href="./article2016101.html" class="readAll">阅读全文</a>
-				</div>
-				<div style="clear:both;"></div>
-			</div>
-
-     
-
-
-			<div class="article_tit">
-				<div class="article_tit_pic"><a  ><img src="images/gudu.png"/></a></div>
-				<div class="article_tit_txt">
-					<h4><a  >你不够优秀，是因为你不够孤独</a></h4>
-					<p><a   >小何</a><a   class="Clas"></a><a   class="time">2016-10-2</a><a   class="opine">评论（134）</a><a   class="look">浏览（579）</a></p>
-					<p class="article_con">长大以后，我只能奔跑，我多害怕，在黑暗中跌倒...</p>
-					<a href="./article2016102.html" class="readAll">阅读全文</a>
-				</div>
-				<div style="clear:both;"></div>
-			</div>
-
-			<div class="article_tit">
-				<div class="article_tit_pic"><a  ><img src="images/tieba.gif"/></a></div>
-				<div class="article_tit_txt">
-					<h4><a  >你喜欢我这只喵么</a></h4>
-					<p><a   >小何</a><a   class="Clas"></a><a   class="time">2016-10-2</a><a   class="opine">评论（88）</a><a   class="look">浏览（849）</a></p>
-					<p class="article_con">看到右边的这只喵，是不是觉得它很可爱呢，它隶属于沪江网校，沪江网校是全国最大的网络教育机构，而我，现在是沪江的宠物管理员，负责沪江外围动漫的推广和运营，右边的这只喵，我可是它最大的铲屎官哦，沪江最拉风的喵：萌C大大，就是我哦，赶紧来关注它吧</p>
-					<a href="http://tieba.baidu.com/f?kw=cc%E7%8C%AB_ " class="readAll">关注本喵</a>
-				</div>
-				<div style="clear:both;"></div>
-			</div>
+			
 		
 
 			
