--- a/tech/tech.html
+++ b/tech/tech.html
@@ -81,7 +81,7 @@
 	<script src="../js/rocketTop.js" type="text/javascript"></script><!--返回顶部-->
 	<script src="../js/loadBlog.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			window.onload = loadBlog("blog")
+			window.onload = loadBlog("20200101")
 		</script>
 	<script src="../js/picBig.js" type="text/javascript"></script>
 </html>
