--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ var _hmt = _hmt || [];
 				<li><a href="./index.html" class="on">首页</a></li>
 				<li><a href="./about.html">个人简介</a></li>
 				<li><a href="./article_list_jy.html">日记</a></li>
-				<li><a href="./time.html">自学之路</a></li>
+				<li><a href="./tech_list.html">心得</a></li>
 				<li><a href="./message.html">留言板</a></li>
 			</ul>
 		</div>
