--- a/tech/tech.html
+++ b/tech/tech.html
@@ -79,7 +79,7 @@
 	</body>
 	<script src="../js/jquery-1.7.2.min.js"></script><!--1.7.2JQ引入-->
 	<script src="../js/rocketTop.js" type="text/javascript"></script><!--返回顶部-->
-	<script src="../js/loadBlog.js" type="text/javascript"></script>
+	<script src="../js/loadTech.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			window.onload = loadBlog("tech")
 		</script>
