--- a/paper_list.html
+++ b/paper_list.html
@@ -53,7 +53,6 @@ var _hmt = _hmt || [];
 	<!--nav end-->
 	<!--articla start-->
 	<div class="banner_right">
-		
 		<div class="lit_nav">
 			<div style="clear:both;"></div>
 		</div>
@@ -65,59 +64,58 @@ var _hmt = _hmt || [];
 		</div>
 
        <!--云标签-->
-				<div class="iM-right-content">
-					<div id="tagsList">
-					    <a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95PageRank%E7%AE%97%E6%B3%95.md">PageRank</a>
-				    <a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E6%AD%A5%E5%B0%9D%E8%AF%95Kmeans%E7%AE%97%E6%B3%95.md" >K-means</a>
-                     <a  href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95%E5%85%B3%E8%81%94%E8%A7%84%E5%88%99.md" >FP-Growth</a>
-                     <a  href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95%E5%85%B3%E8%81%94%E8%A7%84%E5%88%99.md" >Apriori</a>
-                    <a  href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95%E5%86%B3%E7%AD%96%E6%A0%91%E7%AE%97%E6%B3%95.md" >ID3</a>
-                      <a  href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95SVM.md" >SVM</a>
-                   <a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95%E9%80%BB%E8%BE%91%E5%9B%9E%E5%BD%92.md">逻辑回归</a>
-                  <a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E6%AD%A5%E5%B0%9D%E8%AF%95%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92%E7%AE%97%E6%B3%95.md">线性回归</a>
+		<div class="iM-right-content">
+			<div id="tagsList">
+				<a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95PageRank%E7%AE%97%E6%B3%95.md">PageRank</a>
+			<a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E6%AD%A5%E5%B0%9D%E8%AF%95Kmeans%E7%AE%97%E6%B3%95.md" >K-means</a>
+				<a  href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95%E5%85%B3%E8%81%94%E8%A7%84%E5%88%99.md" >FP-Growth</a>
+				<a  href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95%E5%85%B3%E8%81%94%E8%A7%84%E5%88%99.md" >Apriori</a>
+			<a  href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95%E5%86%B3%E7%AD%96%E6%A0%91%E7%AE%97%E6%B3%95.md" >ID3</a>
+				<a  href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95SVM.md" >SVM</a>
+			<a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E8%AF%95%E9%80%BB%E8%BE%91%E5%9B%9E%E5%BD%92.md">逻辑回归</a>
+			<a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E6%95%B0%E6%8D%AE%E6%8C%96%E6%8E%98%E4%B8%8E%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AE%97%E6%B3%95/%E5%88%9D%E6%AD%A5%E5%B0%9D%E8%AF%95%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92%E7%AE%97%E6%B3%95.md">线性回归</a>
 
 
-                     <a  href="https://github.com/woshidandan/simple-project/blob/master/%E5%A4%9A%E5%BD%A9%E7%9A%84%E6%9C%BA%E5%99%A8%E4%BA%BA.md" >机器人</a>
-				    <a href="http://xiaohegithub.cn/pagestudy.html" >GitHub-Page</a>
-				    <a href="https://github.com/woshidandan/hadoop-spark/tree/master/%E7%AE%80%E5%8D%95%E6%A1%88%E4%BE%8B/hadoop%E6%A1%88%E4%BE%8B" >案例</a>
-				    <a href="https://github.com/woshidandan/Hive" ">Hive</a>
-				    <a href="https://github.com/woshidandan/hadoop-spark/tree/master/%E9%85%8D%E7%BD%AE%E6%96%87%E6%A1%A3" >配置文档</a>
-				    <a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E5%90%84%E7%B1%BBhadoop%E5%AD%A6%E4%B9%A0%E8%B5%84%E6%BA%90.txt" >学习资源</a>
-				    <a href="https://github.com/woshidandan/web/tree/master/%E5%86%85%E7%BD%91%E6%98%A0%E5%B0%84%E5%B7%A5%E5%85%B7" >前端</a>
-				    <a href="https://github.com/woshidandan/web/tree/master/%E7%BD%91%E7%AB%99%E6%BA%90%E7%A0%81" >网站源码</a>
-				    <a href="https://github.com/woshidandan/android" >Android</a>
-				    <a href="https://github.com/woshidandan/simple-project/tree/master/Weixin" >微信公众号</a>
-				    <a href="https://github.com/woshidandan/e-language" >易语言</a>
-				    <a href="http://xiaohegithub.cn/about.html" >个人简介</a>
-				    <a href="http://xiaohegithub.cn/message.html" >留言板</a>
-				    <a href="http://xiaohegithub.cn/time.html" >自学之路</a>
-				    <a href="http://xiaohegithub.cn/index.html" >首页</a>
-					</div>
-				</div>
-
+				<a  href="https://github.com/woshidandan/simple-project/blob/master/%E5%A4%9A%E5%BD%A9%E7%9A%84%E6%9C%BA%E5%99%A8%E4%BA%BA.md" >机器人</a>
+			<a href="http://xiaohegithub.cn/pagestudy.html" >GitHub-Page</a>
+			<a href="https://github.com/woshidandan/hadoop-spark/tree/master/%E7%AE%80%E5%8D%95%E6%A1%88%E4%BE%8B/hadoop%E6%A1%88%E4%BE%8B" >案例</a>
+			<a href="https://github.com/woshidandan/Hive" ">Hive</a>
+			<a href="https://github.com/woshidandan/hadoop-spark/tree/master/%E9%85%8D%E7%BD%AE%E6%96%87%E6%A1%A3" >配置文档</a>
+			<a href="https://github.com/woshidandan/hadoop-spark/blob/master/%E5%90%84%E7%B1%BBhadoop%E5%AD%A6%E4%B9%A0%E8%B5%84%E6%BA%90.txt" >学习资源</a>
+			<a href="https://github.com/woshidandan/web/tree/master/%E5%86%85%E7%BD%91%E6%98%A0%E5%B0%84%E5%B7%A5%E5%85%B7" >前端</a>
+			<a href="https://github.com/woshidandan/web/tree/master/%E7%BD%91%E7%AB%99%E6%BA%90%E7%A0%81" >网站源码</a>
+			<a href="https://github.com/woshidandan/android" >Android</a>
+			<a href="https://github.com/woshidandan/simple-project/tree/master/Weixin" >微信公众号</a>
+			<a href="https://github.com/woshidandan/e-language" >易语言</a>
+			<a href="http://xiaohegithub.cn/about.html" >个人简介</a>
+			<a href="http://xiaohegithub.cn/message.html" >留言板</a>
+			<a href="http://xiaohegithub.cn/time.html" >自学之路</a>
+			<a href="http://xiaohegithub.cn/index.html" >首页</a>
+			</div>
+		</div>
 	</div>
 	<div class="article_left">
 		<div class="article_tuiJ">
 			<h3><a href="#">首页</a>&gt;&gt;<a href="#">日记</a></h3>
 			<p>学习是快乐的，独乐乐不如众乐乐</p>
 		</div>
-
-
-
-<div id = "paperList">
-
-	<div class="article_tit">
+		<div class="Index" id="index"></div>
+		<div id = "paperList"></div>
+		<div class="article_tit">
 			<div class="article_tit_txt">
-		<p><a href="day/article20200101.html" class="title">-一月小计（一）-</a><a class="athor">qren</a><a   class="Clas"></a><a   class="time">2020-1-1</a><a   class="opine">评论（654）</a><a   class="look">浏览（835）</a></p>
-		
+				<p>
+					<a href="day/article20200101.html" class="title">-一月小计（一）-</a>
+					<a class="athor">qren</a>
+					<a class="Clas"></a>
+					<a class="time">2020-1-1</a>
+					<a class="opine">评论（654）</a>
+					<a class="look">浏览（835）</a>
+				</p>
 				<div style="clear:both;"></div>
 			</div>
-			</div>
-</div>
-
-		
-		
-	<div class="Index">
+		</div>
+			
+		<div class="Index">
 			<ul>
 				<li><a href="#" class="Index_on">首页</a></li>
 				<li><a href="#">上一页</a></li>
@@ -131,7 +129,6 @@ var _hmt = _hmt || [];
 				<li><a href="javascript:void(0)">共5页40条</a></li>
 			</ul>
 		</div>
-		
 	</div>
 	<!--article end-->
 
