--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ var _hmt = _hmt || [];
 				<li><a href="./about.html">个人简介</a></li>
 				<li><a href="./article_list_jy.html">日记</a></li>
 				<li><a href="./tech_list.html">心得</a></li>
-				<li><a href="./paper_list.html">论文导读</a></li>
+				<li><a href="./paper_list.html?d=Vision">论文导读</a></li>
 			</ul>
 		</div>
 	</div>
