--- a/paper/paper.html
+++ b/paper/paper.html
@@ -31,7 +31,7 @@
 			</div><!--靠着此元素支撑header的背景图片高度-->
 		</header>
 		<div class="Index" id="index"></div>
-		<div id="tech"></div>
+		<div id="paper"></div>
 			<!--section class="dt-main effect">
 					<div class="dt-content">
 						
