--- a/paper/paper.html
+++ b/paper/paper.html
@@ -18,6 +18,7 @@
 				font-style:oblique
 				}
 		</style>
+		<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
 	</head>
 	<body>		
 		<header class="dtTitBg" id="dtTitBg" style="background:url(../images/img30.jpg) no-repeat;" >
@@ -32,6 +33,12 @@
 		</header>
 		<div class="Index" id="index"></div>
 		<div id="paper"></div>
+		<div class="formula">
+			<label>暴雨强度公式：</label><span>`i=A/(t+b)^n`</span>
+			<label>峰前降雨强度公式：</label><span>`i(t_b)=A[(1-n)*t/r+b]/[(t_b/r)+b]^(n+1)`</span>
+			<label>峰后降雨强度公式：</label><span>`i(t_a)=A[(1-n)*t_a/(1-r)+b]/[(t_a/(1-r))+b]^(n+1)`</span>
+			<label>备注：</label><span>`A=[A_1(1+ClgP)]/167`</span>
+		</div>
 			<!--section class="dt-main effect">
 					<div class="dt-content">
 						
