--- a/paper/paper.html
+++ b/paper/paper.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Hi Qren</title>	
+		<title>Hi Qren</title>
+		<link rel="dns-prefetch" href="//cdn.bootcss.com" />	
 		<link href="../css/detailsPages.css" rel="stylesheet" type="text/css" /><!--详情页CSS-->
 		<link href="../css/rocketTop.css" rel="stylesheet" type="text/css" /><!--返回顶部-->
 		<link type="text/css" rel="stylesheet" href="../css/blog_list.css"/>
