--- a/paper/paper.html
+++ b/paper/paper.html
@@ -19,7 +19,8 @@
 				font-style:oblique
 				}
 		</style>
-		<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
+		<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+		
 	</head>
 	<body>		
 		<header class="dtTitBg" id="dtTitBg" style="background:url(../images/img30.jpg) no-repeat;" >
@@ -90,6 +91,30 @@
 	<script src="../js/loadPaperC.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			window.onload = loadBlog("Paper")
+		</script>
+		<script type="text/javascript">
+			let isMathjaxConfig = false; // 防止重复调用Config，造成性能损耗
+
+			const initMathjaxConfig = () => {
+			if (!window.MathJax) {
+				return;
+			}
+			window.MathJax.Hub.Config({
+				showProcessingMessages: false, //关闭js加载过程信息
+				messageStyle: "none", //不显示信息
+				jax: ["input/TeX", "output/HTML-CSS"],
+				tex2jax: {
+				inlineMath: [["$", "$"], ["\\(", "\\)"]], //行内公式选择符
+				displayMath: [["$$", "$$"], ["\\[", "\\]"]], //段内公式选择符
+				skipTags: ["script", "noscript", "style", "textarea", "pre", "code", "a"] //避开某些标签
+				},
+				"HTML-CSS": {
+				availableFonts: ["STIX", "TeX"], //可选字体
+				showMathMenu: false //关闭右击菜单显示
+				}
+			});
+			isMathjaxConfig = true; // 
+			};
 		</script>
 	<script src="../js/picBig.js" type="text/javascript"></script>
 </html>
