--- a/paper/paper.html
+++ b/paper/paper.html
@@ -41,6 +41,7 @@
 			<label>峰后降雨强度公式：</label><span>`i(t_a)=A[(1-n)*t_a/(1-r)+b]/[(t_a/(1-r))+b]^(n+1)`</span>
 			<label>备注：</label><span>`A=[A_1(1+ClgP)]/167`</span>
 		</div>
+		<div><span>`i(t_a)=A[(1-n)*t_a/(1-r)+b]/[(t_a/(1-r))+b]^(n+1)`</span></div>
 			<!--section class="dt-main effect">
 					<div class="dt-content">
 						
